--- a/main.html
+++ b/main.html
@@ -7,6 +7,16 @@
 </head>
 
 <body>
+	<h1>Login Form</h1>
+	<form>
+		<input type="text" placeholder="Username" id="username">
+		<br><br>
+		<input type="password" placeholder="Password" id="password">
+		<br><br>
+		<label for="checkbox">Remember me</label>
+		<input type="checkbox" id="checkbox">
+		<input type="submit" id="submit" value="Submit">
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
