--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<h1>Login Form</h1>
 	<form>
-		<label for="username">Username</label>
+		<label for="Username" content='Username:'></label>
 		<input type="text" placeholder="Username" id="username">
 		<br><br>
 		<input type="password" placeholder="Password" id="password">
