--- a/main.html
+++ b/main.html
@@ -9,14 +9,16 @@
 <body>
 	<h1>Login Form</h1>
 	<form>
-		<label for="Username" content='Username:'></label>
+		<label for="username">Username</label>
 		<input type="text" placeholder="Username" id="username">
 		<br><br>
+		<label for='password'>Password</label>
 		<input type="password" placeholder="Password" id="password">
 		<br><br>
 		<label for="checkbox">Remember me</label>
 		<input type="checkbox" id="checkbox">
 		<input type="submit" id="submit" value="Submit">
+		<button id="existing" hidden>Login as existing user</button>
 	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
